<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f5df"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle"
                android:src="@mipmap/blood_bank_icon_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="365dp"
            android:layout_height="39dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/signin_btn"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:background="@drawable/signin_btn"
            android:text="@string/blood_storage"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/forgotpass"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

    </LinearLayout>

</ScrollView>